[gd_scene load_steps=2 format=3 uid="uid://bbljwq4afup1h"]

[ext_resource type="Script" path="res://screens/app.gd" id="1_eo2f7"]

[node name="App" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eo2f7")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="FileSaveDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
size = Vector2i(207, 175)
ok_button_text = "Save"
access = 2
use_native_dialog = true

[node name="FolderDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
size = Vector2i(207, 175)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="M3uFilePath" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "List"

[node name="LoadM3uButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load List"

[node name="GuideFilePath" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Guide"

[node name="LoadGuideButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load Guide"

[node name="LogosFilePath" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Logos"

[node name="LoadLogosButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load Logos"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ParseButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Parse"

[node name="TvgIdButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sugest TVG ID"

[node name="LogosButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sugest Logos"

[node name="GroupButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sugest Groups"

[node name="ExportButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Export"

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="TableEntries" type="VBoxContainer" parent="VBoxContainer/Panel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="FileSaveDialog" to="." method="_on_file_save_dialog_file_selected"]
[connection signal="dir_selected" from="FolderDialog" to="VBoxContainer/HBoxContainer/LogosFilePath" method="set_text"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadM3uButton" to="." method="_on_load_m3u_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadGuideButton" to="." method="_on_load_guide_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadLogosButton" to="FolderDialog" method="popup"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ParseButton" to="." method="_on_parse_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/TvgIdButton" to="." method="_on_tvg_id_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LogosButton" to="." method="_on_logos_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/GroupButton" to="." method="_on_group_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ExportButton" to="." method="_on_export_button_pressed"]
